cabal-version:      2.2
name:               bhoogle
version:            0.1.3.5
license:            (BSD-3-Clause OR Apache-2.0)
license-file:       LICENSE
copyright:          2018 Andre Van Der Merwe
maintainer:         andre@andrevdm.com
author:             Andre Van Der Merwe
homepage:           https://github.com/andrevdm/bhoogle#readme
synopsis:           Simple terminal GUI for local hoogle.
description:
  bhoogle is a terminal GUI layer over local hoogle. It provides search ahead and sub-string filtering in addition to the usual type-search.

category:           Development, Terminal
build-type:         Simple
extra-source-files: README.md

source-repository head
  type:     git
  location: https://github.com/andrevdm/bhoogle

executable bhoogle
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wimplicit-prelude

  build-depends:
    , base           >=4.9.1.0 && <5
    , brick          >=0.37.1  && <1
    , bytestring     >=0.10 && < 0.12
    , containers     ^>=0.6
    , directory      ^>=1.3
    , filepath       ^>=1.4
    , hoogle         ^>=5.0
    , lens           ^>=5.2
    , process        ^>=1.6
    , protolude      ^>=0.3
    , text           ^>=1.2
    , time           ^>=1.9
    , typed-process  ^>=0.2
    , vector         ^>=0.13
    , vty            ^>=5.36
